syntax = "proto3";

package t1;

option go_package  = "./proto_buffer";


service OrderService {
    rpc HandlerOrder(OrderRequest) returns (OrderResponse) { }
}

message OrderRequest { 
  string id = 1;
  string name = 2;
  string type = 3;
  string time = 4;
  double amount = 5;
}

message OrderResponse { 
    int64 status = 1;
    string description = 2;
}